<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            style="@style/welcome_textview"
            android:text="@string/my_nano_degree_apps" />

        <Button
            android:id="@+id/spotify_streamer_button"
            style="@style/button"
            android:text="@string/spotify_streamer" />

        <Button
            android:id="@+id/scores_app_button"
            style="@style/button"
            android:text="@string/scores_app" />

        <Button
            android:id="@+id/library_app_button"
            style="@style/button"
            android:text="@string/library_app" />

        <Button
            android:id="@+id/build_it_bigger_button"
            style="@style/button"
            android:text="@string/build_it_bigger" />

        <Button
            android:id="@+id/xyz_reader_button"
            style="@style/button"
            android:text="@string/xyz_reader" />

        <Button
            android:id="@+id/my_own_app_button"
            style="@style/button"
            android:background="@color/red"
            android:text="@string/my_own_app" />


    </LinearLayout>
</ScrollView>